# python-playground

./: README.md  pyproject.toml  run.sh
.devcontainer/: Dockerfile  devcontainer.json
