[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
dapr = "^1.7.0"
dapr-ext-grpc = "^1.7.0"
dapr-ext-fastapi = "^1.8.3"
fastapi = "^0.85.1"
uvicorn = { extras = ["standard"], version = "^0.19.0" }


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
